# Exercise

Bazy Danych/: ksiegarnia.sql  library.sql  restaurant.sql  sklep_internetowy.sql  system_rezerwacji.sql
BoosAsio/: czalKlientB.cpp  czatKlientA.cpp  czatServer.cpp  klient.cpp  logika.txt  server.cpp
Java/Kolekcje/: kolekcja1.java
Java/Losowania/: losowanie1.java  losowanie2.java  losowanie3.java  losowanie4.java  losowanie5.java
Java/NaPlikach/: odczytPlik.java
Java/Petle/: petle.java  petleDodatkowe.java
Java/Podstawowe Operacje/: delta.java  dzielenieLiczb.java  kandydatura.java  poleKola.java  tProstokatny.java  trojkat.java
Java/Sortowanie/: sortowanieLiczb.java
Python/: Problem_plecakowy.py  Tabela_prenum.py  Titanic.py  analiza_titanic.py
Python/DATA/: numpyEx.py  seabor.Ex.py
ToDo/: .gitignore  README.txt  main.cpp  todo.cpp  todo.h
ToDo/UML/: DiagramKlas_ToDo.mdj
Wzorce Projektowe/: CMakeLists.txt  Dekorator.cpp  Obserwator.cpp  Strategia.cpp  testyDekorator.cpp  testyObserwator.cpp  testyWzorce.cpp
